tuprolog fork updates